# music-recommender

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: abe7139ca849_initial_migration.py
backend/src/agents/: prompts.py  song_feature_agent.py
backend/src/api/: dependencies.py
backend/src/api/routes/: music.py  recommendations.py  songs.py
backend/src/core/: config.py  database.py
backend/src/core/storage/: music.db
backend/src/domain/models/: song.py
backend/src/domain/schemas/: song.py
backend/src/repositories/: deezer_repository.py  song_repository.py  spotify_repository.py
backend/src/services/: music_service.py  recommender_service.py  song_service.py  text_structure.py
backend/src/utils/: seeder.py
backend/tests/: conftest.py
backend/tests/api/routes/: test_music.py  test_recommendations.py  test_songs.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package.json  reference.html  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  Hero.tsx  PlayerBar.tsx  SongList.tsx
frontend/src/store/: musicStore.ts
frontend/src/types/: index.ts
