[project]
name = "music-recommender"
version = "0.1.0"
description = "Music recommender"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "fastapi[standard]>=0.127.0",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "pydantic-settings>=2.12.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
